# hvx

./: hvx.cabal
src/HVX/: Primitives.hs
src/HVX/Internal/: Primitives.hs  Solvers.hs  SymbolicSubgrad.hs
test/HVX/: SymbolicSubgradSpec.hs
